Finalisasi fitur Journal, Auth, dan update Swagger API
